--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -48,7 +48,7 @@ jobs:
           name: run tests
           command: |
             . venv/bin/activate
-            python unittest/api_test test
+            python unittest/test_api.py test
 
       - store_artifacts:
           path: test-reports
