--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -48,7 +48,7 @@ jobs:
           name: run tests
           command: |
             . venv/bin/activate
-            python test_api test
+            python -m test_api
 
       - store_artifacts:
           path: test-reports
